# MBGL

./: .gitignore  CMakeLists.txt  README.md
data/Engine/ColorSchemes/: Example.mk_color
data/Engine/shaders/: simple_triangle.frag
data/shaders/: simple_triangle.frag  simple_triangle.vert
libs/glad/: README.md  glad.c  glad.h
libs/glm/glm/gtx/: quaternion.inl
src/: library.cpp  library.h
src/GUI/: GUI.cpp  GUI.h  GUI_Base.cpp  GUI_Base.h  GUI_Manager.cpp  GUI_Manager.h  ImprovedGui.cpp  ImprovedGui.h
src/Meta/: GameObject.h
src/OctreeMain/: Octree.cpp  Octree.h
src/StateMachine/: State.h  StateMachine.cpp  StateMachine.h
src/Support/: Logger.cpp  Logger.h  TextAndFont.cpp  TextAndFont.h
src/Window/: ShaderLoader.cpp  ShaderLoader.h  WindowManager.cpp  WindowManager.h
